# MCUSerialTool

./: CMakeLists.txt  CMakeLists.txt.shared  MCUTool.qmlproject  MCUTool.qmlproject.qtds  MCUTool.qrc  README.md  qds.cmake  qtquickcontrols2.conf
.github/agents/: bug_analyzer.agent.md
App/: CMakeLists.txt
App/autogen/: environment.h
Dependencies/Components/: CMakeLists.txt  ignore-in-qds
Dependencies/Components/imports/: CMakeLists.txt
Dependencies/Components/imports/application/: CMakeLists.txt  quickstudioapplication.cpp
Dependencies/Components/imports/compat/Components/: CMakeLists.txt
Dependencies/Components/imports/compat/Extras/: CMakeLists.txt
Dependencies/Components/imports/compat/Layers/: CMakeLists.txt
Dependencies/Components/imports/compat/Profiling/: CMakeLists.txt
Dependencies/Components/imports/compat/QtAndroidAutomotive/: CMakeLists.txt
Dependencies/Components/imports/compat/QtAndroidAutomotive/ActivityView/: CMakeLists.txt
Dependencies/Components/imports/components/: CMakeLists.txt
Dependencies/Components/imports/designeffects/: CMakeLists.txt
Dependencies/Components/imports/effects_qt6/: CMakeLists.txt
Dependencies/Components/imports/flowview/: CMakeLists.txt
Dependencies/Components/imports/logichelper/: BidirectionalBinding.qml  CMakeLists.txt
Dependencies/Components/imports/multitext/: CMakeLists.txt
Dependencies/Components/imports/tools/eventsimulator/: CMakeLists.txt
Dependencies/Components/imports/tools/eventsystem/: CMakeLists.txt
Dependencies/Components/imports/utils/: CMakeLists.txt  quickstudiocsvtablemodel.cpp  quickstudiofilereader.cpp
MCUTool/: CMakeLists.txt  Constants.qml  qmldir
MCUTool/designer/: plugin.metainfo
MCUToolContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
Python/: QUICK_REFERENCE.md  README.md  data_handler.py  main.py  modbus_protocol.py  pyproject.toml  serial_port_manager.py
Python/autogen/: settings.py
Python/instruction/: 00_COMPLETION_REPORT.md  REFACTOR_SUMMARY.md  STRUCTURE.md
